<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/tab_home_air"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/nav_home"/>
        <item android:id="@+id/tab_import_air"
            android:icon="@drawable/baseline_file_download_black_24"
            android:title="@string/title_import_air"/>
        <item android:id="@+id/tab_export_air"
            android:icon="@drawable/baseline_file_upload_black_24"
            android:title="@string/title_export_air"/>
        <item android:id="@+id/tab_retail_goods_air"
            android:icon="@drawable/baseline_shopping_bag_black_24"
            android:title="@string/title_retail_goods_air"/>
        <item android:id="@+id/tab_chat"
            android:icon="@drawable/ic_baseline_mark_chat_unread_24"
            android:title="@string/Mesenger"/>
    </group>
    <item android:title="@string/nav_account">
        <menu>
            <item android:id="@+id/nav_my_profile"
                android:title="@string/nav_my_profile"
                android:icon="@drawable/ic_baseline_manage_accounts_24"/>
        </menu>
    </item>
</menu>