<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.driver.UIChat.UINewMessage">
    <androidx.core.widget.NestedScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lnlTop"
            android:background="@drawable/gradient_dania"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.Toolbar
                app:title="@string/New_chat"
                app:titleTextColor="@color/white"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <Button
                    android:id="@+id/btnChat"
                    android:layout_gravity="end"
                    android:textColor="@color/white"
                    android:background="@color/colorTransparent"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/Chat"/>
            </androidx.appcompat.widget.Toolbar>

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchName"
                app:iconifiedByDefault="false"
                app:queryHint="@string/Search_by_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/rclvMemberListChecked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.example.demoapp.CustomView.NonScrollRecyclerView
                android:layout_marginTop="10dp"
                android:id="@+id/rclvAllMember"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>


        </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>